fix: height issue on mobile

--- a/src/app/(home)/_sections/StMich.module.css
+++ b/src/app/(home)/_sections/StMich.module.css
@@ -1,5 +1,5 @@
 .stMichSection {
-	min-height: 95vh;
+	min-height: 95dvh;
 	font-family: var(--font-poppins);
 	overflow: hidden;
 }
